--- a/DA6401__Assignment_1.ipynb
+++ b/DA6401__Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORxfsZGIqhuroSknibPie1",
+      "authorship_tag": "ABX9TyOnN9b6AKX7i2bN/PazoNBJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "d7r7oJ11qIq7"
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "\n",
+        "x = [1,2,3,4]\n",
+        "y = [3,4,5,6]\n"
       ]
     }
   ]
