--- a/DA6401__Assignment_1.ipynb
+++ b/DA6401__Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnN9b6AKX7i2bN/PazoNBJ",
+      "authorship_tag": "ABX9TyPKyfgFGl4wRUX7piu2zrZO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,17 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "d7r7oJ11qIq7"
-      },
-      "outputs": [],
       "source": [
+        "import wandb\n",
         "import numpy as np\n",
+        "from keras.datasets import fashion_mnist\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
-        "x = [1,2,3,4]\n",
-        "y = [3,4,5,6]\n"
-      ]
+        "\n",
+        "wandb.init(project = \"assignment_1\", entity=\"devyadav11\")   #  initialize a Weights & Biases (WandB) run\n",
+        "\n",
+        "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()   # loading data\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Q6pZSrwcx8xc"
+      },
+      "execution_count": 27,
+      "outputs": []
     }
   ]
 }
