--- a/DA6401__Assignment_1.ipynb
+++ b/DA6401__Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPON0ogcnRlMH62Myuk336k",
+      "authorship_tag": "ABX9TyPXGSOM6SdtpQtvJ/uQeRse",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         },
         "outputId": "525cb50d-5825-4dce-e63b-bea45dce1255"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -186,18 +186,20 @@
         "## Question-2:\n",
         "\n",
         "class feed_forward():\n",
-        "  def __init__(self, num_hidden_layers, num_neurons, ):\n",
-        "    self.num_hidden_layers = num_hidden_layers   # instance variable\n",
-        "    self.num_neurons = num_neurons               # instance variable\n",
+        "  def __init__(self, layers ):\n",
+        "    self.layers = layers                   # number of neurons and hidden layers (instance variable)\n",
+        "    self.weights = []\n",
+        "    self.bias = []\n",
+        "    for i in range(len(layers)):\n",
+        "      weight = np.random.randn(layers[i], layers[i-1])\n",
+        "      self.weights.append(weight)\n",
+        "      bias = np.random.randn(layers[i], 1)\n",
+        "      self.bias.append(bias)\n",
         "\n",
-        "\n",
-        "    def forward(self, w , b):\n",
-        "      for i in range(self.num_hidden_layers):\n",
-        "         for j in range(self.num_neurons):\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "  def forward(self, x):\n",
+        "      self.x = x.reshape(-1, 1)\n",
+        "      for i in range(len(self.layers - 1)):\n",
+        "        a = np.dot(self.weights[], x) + self.bias\n",
         "\n",
         "\n",
         "\n",
@@ -206,10 +208,24 @@
         "\n"
       ],
       "metadata": {
-        "id": "-FlA5nt9HJo4"
+        "id": "-FlA5nt9HJo4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "2f61dce1-33c2-4eb0-96f1-5513a042c33b"
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "expected ':' (<ipython-input-4-4287e065f924>, line 16)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-4287e065f924>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    for i in range(len)\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
