--- a/DA6401__Assignment_1.ipynb
+++ b/DA6401__Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNttyA86GExfJjIm1Lmgnet",
+      "authorship_tag": "ABX9TyO3MjNQO62pXW5fCbZQRzu0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,10 +74,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "e808707e-9493-4dbf-d1e3-cc4bf2ca9011"
+        "outputId": "9d14f509-27b1-4f82-9642-705a8b553f33"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -164,7 +171,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20250305_191325-qm73l9ze</code>"
+              "Run data is saved locally in <code>/content/wandb/run-20250306_124752-zjmve3eb</code>"
             ]
           },
           "metadata": {}
@@ -176,7 +183,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/devyadav11/assignment_1/runs/qm73l9ze' target=\"_blank\">solar-snowflake-2</a></strong> to <a href='https://wandb.ai/devyadav11/assignment_1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+              "Syncing run <strong><a href='https://wandb.ai/devyadav11/assignment_1/runs/zjmve3eb' target=\"_blank\">glowing-night-4</a></strong> to <a href='https://wandb.ai/devyadav11/assignment_1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
             ]
           },
           "metadata": {}
@@ -200,7 +207,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View run at <a href='https://wandb.ai/devyadav11/assignment_1/runs/qm73l9ze' target=\"_blank\">https://wandb.ai/devyadav11/assignment_1/runs/qm73l9ze</a>"
+              " View run at <a href='https://wandb.ai/devyadav11/assignment_1/runs/zjmve3eb' target=\"_blank\">https://wandb.ai/devyadav11/assignment_1/runs/zjmve3eb</a>"
             ]
           },
           "metadata": {}
@@ -214,7 +221,7 @@
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
             "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
             "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
           ]
@@ -339,7 +346,7 @@
         "    self.layers = layers                   # number of neurons and hidden layers (instance variable)\n",
         "    self.weights = []\n",
         "    self.bias = []\n",
-        "    for i in range(len(layers)):\n",
+        "    for i in range(1, len(layers)):\n",
         "      weight = np.random.randn(layers[i], layers[i-1])\n",
         "      self.weights.append(weight)\n",
         "      bias = np.random.randn(layers[i], 1)\n",
@@ -355,43 +362,49 @@
         "\n",
         "\n",
         "  def forward(self, x):\n",
-        "      self.x = x.reshape(-1, 1)\n",
-        "      last_hidden_layer = []\n",
+        "      self.x = x\n",
+        "      self.last_hidden_layer = []\n",
+        "      self.a = []\n",
+        "\n",
         "      for i in range(len(self.layers) - 1):\n",
-        "        if i == 0:\n",
-        "          pass\n",
-        "        else:\n",
-        "          a = np.dot(self.weights[i], x) + self.bias[i]\n",
-        "          h =  self.sigmoid(a)                               #     doughts\n",
-        "          x = h\n",
-        "        last_hidden_layer.append(h)\n",
-        "      return last_hidden_layer\n",
-        "      self.output_layer = np.dot(self.weights[-1], last_hidden_layer) + self.bias[-1]\n",
+        "        a = np.dot(self.weights[i], self.x) + self.bias[i]\n",
+        "        self.x =  self.sigmoid(a)\n",
+        "        self.a.append(self.a)\n",
+        "\n",
+        "        self.last_hidden_layer.append(self.x)\n",
+        "        #return self.last_hidden_layer\n",
+        "\n",
+        "      for i in range(len(self.last_hidden_layer)):\n",
+        "        print(self.last_hidden_layer[i])\n",
+        "      for i in range(len(self.a)):\n",
+        "        print(self.a[i])\n",
+        "\n",
+        "\n",
+        "      self.output_layer = np.dot(self.weights[-1], self.last_hidden_layer[-1]) + self.bias[-1]\n",
         "      self.output = self.softmax(self.output_layer)\n",
         "      return self.output\n",
         "\n",
         "\n",
         "\n",
         "# Define network structure (change as needed)\n",
-        "layer_sizes = [784, 128, 64, 10]  # Input layer, hidden layers, output layer\n",
+        "layer_sizes = [784, 3, 4, 2, 10]  # Input layer, hidden layers, output layer\n",
         "nn = feed_forward(layer_sizes)\n",
         "\n",
         "# Test with one sample image\n",
         "sample_image = test_images[0]\n",
+        "actual_output = test_labels[0]\n",
         "output_probs = nn.forward(sample_image)\n",
         "\n",
         "# Display image and predicted class\n",
         "plt.imshow(sample_image.reshape(28, 28), cmap='gray')\n",
-        "plt.title(f\"Predicted Class: {np.argmax(output_probs)}\")\n",
+        "\n",
         "plt.axis('off')\n",
         "plt.show()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "#print(actual_output)\n",
+        "#print(output_probs)\n",
+        "#print(nn.weights)\n",
+        "#print(\"waights_last =\", nn.weights[-1])\n",
+        "#print(\"bias_last=\", nn.bias[-1])\n",
         "\n",
         "\n",
         "\n",
@@ -401,22 +414,74 @@
         "id": "-FlA5nt9HJo4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 332
+          "height": 731
         },
-        "outputId": "625d0a3f-4c0f-4687-e28a-f780b5d067eb"
+        "outputId": "4518d0ff-396f-4bb8-a3d6-51e2726d5795"
       },
-      "execution_count": 8,
+      "execution_count": 40,
       "outputs": [
         {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6.08037254e-05 8.25862939e-01 9.98975517e-01]\n",
+            " [7.10561419e-05 8.47149339e-01 9.99123215e-01]\n",
+            " [3.89037912e-04 9.68106509e-01 9.99839795e-01]]\n",
+            "[[0.19616307 0.05612257 0.04894413]\n",
+            " [0.74786519 0.89845954 0.90354246]\n",
+            " [0.606547   0.49175991 0.42654806]\n",
+            " [0.2270412  0.08165509 0.09837931]]\n",
+            "[[0.25999133 0.3149335  0.30785653]\n",
+            " [0.20363006 0.17773418 0.19628614]]\n",
+            "[[0.40212945 0.39443207 0.3916459 ]\n",
+            " [0.58868837 0.57057947 0.58001348]\n",
+            " [0.79988981 0.79011026 0.79323952]\n",
+            " [0.18119604 0.18738148 0.18596472]\n",
+            " [0.36017752 0.36718348 0.36606409]\n",
+            " [0.90183528 0.90840567 0.90706738]\n",
+            " [0.89901759 0.89258813 0.89527415]\n",
+            " [0.15976284 0.15306103 0.15509814]\n",
+            " [0.52221219 0.54562753 0.5399991 ]\n",
+            " [0.12722142 0.12153495 0.12215054]]\n",
+            "[[...], [...], [...], [...]]\n",
+            "[[...], [...], [...], [...]]\n",
+            "[[...], [...], [...], [...]]\n",
+            "[[...], [...], [...], [...]]\n"
+          ]
+        },
+        {
           "output_type": "error",
-          "ename": "UnboundLocalError",
-          "evalue": "cannot access local variable 'h' where it is not associated with a value",
+          "ename": "ValueError",
+          "evalue": "shapes (10,2) and (10,3) not aligned: 2 (dim 1) != 10 (dim 0)",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-506e3ba64b07>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;31m# Test with one sample image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0msample_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_images\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m \u001b[0moutput_probs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;31m# Display image and predicted class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-8-506e3ba64b07>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     39\u001b[0m           \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m                               \u001b[0;31m#     doughts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m           \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m         \u001b[0mlast_hidden_layer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mlast_hidden_layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlast_hidden_layer\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'h' where it is not associated with a value"
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-40-7aa7e7599da7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0msample_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_images\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0mactual_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m \u001b[0moutput_probs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;31m# Display image and predicted class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-40-7aa7e7599da7>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_hidden_layer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: shapes (10,2) and (10,3) not aligned: 2 (dim 1) != 10 (dim 0)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(test_labels[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QKhPvJLRxTEr",
+        "outputId": "c05f0d1b-8a93-4e40-e3e7-5b6ec40f1e4d"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
           ]
         }
       ]
