--- a/DA6401__Assignment_1.ipynb
+++ b/DA6401__Assignment_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN4PFrEBxGexivYpmq0yiIG",
+      "authorship_tag": "ABX9TyNeBnaZ7nEWkDO66F0ws2GJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "5e304e2e-45ae-41ea-d612-0a78f31ce213"
+        "outputId": "81124b40-837a-4a23-90b1-b44a7b363f2f"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20250315_131358-wc7b1nr2</code>"
+              "Run data is saved locally in <code>/content/wandb/run-20250315_172809-x2ud0cjz</code>"
             ]
           },
           "metadata": {}
@@ -222,7 +222,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/devyadav11/assignment_1/runs/wc7b1nr2' target=\"_blank\">daily-salad-19</a></strong> to <a href='https://wandb.ai/devyadav11/assignment_1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+              "Syncing run <strong><a href='https://wandb.ai/devyadav11/assignment_1/runs/x2ud0cjz' target=\"_blank\">genial-elevator-20</a></strong> to <a href='https://wandb.ai/devyadav11/assignment_1' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
             ]
           },
           "metadata": {}
@@ -246,7 +246,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View run at <a href='https://wandb.ai/devyadav11/assignment_1/runs/wc7b1nr2' target=\"_blank\">https://wandb.ai/devyadav11/assignment_1/runs/wc7b1nr2</a>"
+              " View run at <a href='https://wandb.ai/devyadav11/assignment_1/runs/x2ud0cjz' target=\"_blank\">https://wandb.ai/devyadav11/assignment_1/runs/x2ud0cjz</a>"
             ]
           },
           "metadata": {}
@@ -258,7 +258,7 @@
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
             "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
+            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
             "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
@@ -391,7 +391,7 @@
       "metadata": {
         "id": "rNjDJQGunmo2"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
       "metadata": {
         "id": "4j8YektTttbK"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -436,6 +436,10 @@
         "    self.epochs = epochs\n",
         "    self.layers = layers                     # number of neurons and hidden layers (instance variable)\n",
         "    self.beta = 0.1\n",
+        "    self.beta_RMS = 0.9\n",
+        "    self.beta1 = 0.9\n",
+        "    self.beta2 = 0.999\n",
+        "    self.epsilon = 1e-8\n",
         "    self.optimizers = optimizers\n",
         "    self.activationFunc = activationFunc\n",
         "\n",
@@ -816,8 +820,170 @@
         "\n",
         "\n",
         "\n",
+        "  def RMS_prop(self):\n",
+        "    W, b = self.weights, self.bias\n",
+        "    iteration = 0\n",
+        "    dv_W = [np.zeros_like(w) for w in self.weights]\n",
+        "    dv_b = [np.zeros_like(b_i) for b_i in self.bias]\n",
+        "\n",
+        "    for epoch in range(self.epochs):\n",
+        "      print(f'epoch {epoch + 1}/{self.epochs}')\n",
         "\n",
         "\n",
+        "\n",
+        "      indices = np.arange(len(self.x_train))\n",
+        "      np.random.shuffle(indices)\n",
+        "\n",
+        "      x_train_shuffle = self.x_train[indices]\n",
+        "      y_train_shuffle = self.y_train[indices]\n",
+        "\n",
+        "      for i in range(0, len(x_train_shuffle), self.batch_size):\n",
+        "        x_batch = x_train_shuffle[i:i + self.batch_size]\n",
+        "        y_batch = y_train_shuffle[i:i + self.batch_size]\n",
+        "\n",
+        "        # Initilise dw and db\n",
+        "        dW = [np.zeros_like(w) for w in W]\n",
+        "        db = [np.zeros_like(b_i) for b_i in b]\n",
+        "\n",
+        "        for j in range(len(x_batch)):\n",
+        "\n",
+        "          output = self.forward_prop(x_batch[j], W, b)\n",
+        "          dW_inter, db_inter = self.backword_prop(y = y_batch[j], x = x_batch[j], W = W, b = b)\n",
+        "\n",
+        "          for i in range(len(W)):\n",
+        "            dW[i] += dW_inter[i]\n",
+        "            db[i] += db_inter[i]\n",
+        "\n",
+        "       # average dw and db in one batch\n",
+        "        dW = [dw / len(x_batch) for dw in dW]\n",
+        "        db = [db_i / len(x_batch) for db_i in db]\n",
+        "\n",
+        "        for i in range(len(W)):\n",
+        "          dv_W[i] = self.beta_RMS*dv_W[i] + (1-self.beta_RMS)*(dW[i])**2\n",
+        "          dv_b[i] = self.beta_RMS*dv_b[i] + (1-self.beta_RMS)*(db[i])**2\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "       #calculating W, b for 1 batch\n",
+        "        for i in range(len(W)):\n",
+        "          W[i] -= self.learning_rate/np.sqrt(dv_W[i] + self.epsilon) * dW[i]\n",
+        "          b[i] -= self.learning_rate/np.sqrt(dv_b[i] + self.epsilon) * db[i]\n",
+        "\n",
+        "\n",
+        "\n",
+        "      # acccuracy and loss calculated after each epoch\n",
+        "      acuu, loss = self.accuracyLoss(W = W, b = b, x = self.x_train, y = self.y_train)\n",
+        "      v_acc, v_loss = self.accuracyLoss(W=  W, b = b, x = self.x_val, y = self.y_val)\n",
+        "\n",
+        "      if self.isWandb == True:\n",
+        "        wandb.log({'accuracy': acuu})\n",
+        "        wandb.log({'loss': loss})\n",
+        "        wandb.log({'v_accuracy': v_acc})\n",
+        "        wandb.log({'v_loss': v_loss})\n",
+        "        wandb.log({'epoch': iteration})\n",
+        "      print(acuu, loss, v_acc, v_loss)\n",
+        "      iteration += 1\n",
+        "\n",
+        "\n",
+        "    # True W, b after training\n",
+        "\n",
+        "    return W, b\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def ADAM(self):\n",
+        "    W, b = self.weights, self.bias\n",
+        "    iteration = 0\n",
+        "    t = 1\n",
+        "    dv_W = [np.zeros_like(w) for w in self.weights]\n",
+        "    dv_b = [np.zeros_like(b_i) for b_i in self.bias]\n",
+        "    dm_W = [np.zeros_like(w) for w in self.weights]\n",
+        "    dm_b = [np.zeros_like(b_i) for b_i in self.bias]\n",
+        "    m_hat_W = [np.zeros_like(w) for w in self.weights]\n",
+        "    m_hat_b = [np.zeros_like(b_i) for b_i in self.bias]\n",
+        "    v_hat_W = [np.zeros_like(w) for w in self.weights]\n",
+        "    v_hat_b = [np.zeros_like(b_i) for b_i in self.bias]\n",
+        "\n",
+        "    for epoch in range(self.epochs):\n",
+        "      print(f'epoch {epoch + 1}/{self.epochs}')\n",
+        "\n",
+        "\n",
+        "\n",
+        "      indices = np.arange(len(self.x_train))\n",
+        "      np.random.shuffle(indices)\n",
+        "\n",
+        "      x_train_shuffle = self.x_train[indices]\n",
+        "      y_train_shuffle = self.y_train[indices]\n",
+        "\n",
+        "      for i in range(0, len(x_train_shuffle), self.batch_size):\n",
+        "        x_batch = x_train_shuffle[i:i + self.batch_size]\n",
+        "        y_batch = y_train_shuffle[i:i + self.batch_size]\n",
+        "\n",
+        "        # Initilise dw and db\n",
+        "        dW = [np.zeros_like(w) for w in W]\n",
+        "        db = [np.zeros_like(b_i) for b_i in b]\n",
+        "\n",
+        "        for j in range(len(x_batch)):\n",
+        "\n",
+        "          output = self.forward_prop(x_batch[j], W, b)\n",
+        "          dW_inter, db_inter = self.backword_prop(y = y_batch[j], x = x_batch[j], W = W, b = b)\n",
+        "\n",
+        "          for i in range(len(W)):\n",
+        "            dW[i] += dW_inter[i]\n",
+        "            db[i] += db_inter[i]\n",
+        "\n",
+        "       # average dw and db in one batch\n",
+        "        dW = [dw / len(x_batch) for dw in dW]\n",
+        "        db = [db_i / len(x_batch) for db_i in db]\n",
+        "\n",
+        "        for i in range(len(W)):\n",
+        "          dv_W[i] = self.beta2*dv_W[i] + (1-self.beta2)*(dW[i])**2\n",
+        "          dv_b[i] = self.beta2*dv_b[i] + (1-self.beta2)*(db[i])**2\n",
+        "\n",
+        "          v_hat_W[i] = dv_W[i]/(1 - self.beta2**t)\n",
+        "          v_hat_b[i] = dv_b[i]/(1 - self.beta2**t)\n",
+        "\n",
+        "\n",
+        "        for i in range(len(W)):\n",
+        "          dm_W[i] = self.beta1*dm_W[i] + (1-self.beta1)*dW[i]\n",
+        "          dm_b[i] = self.beta1*dm_b[i] + (1-self.beta1)*db[i]\n",
+        "\n",
+        "          m_hat_W[i] = dm_W[i]/(1 - self.beta1**t)\n",
+        "          m_hat_b[i] = dm_b[i]/(1 - self.beta1**t)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "       #calculating W, b for 1 batch\n",
+        "        for i in range(len(W)):\n",
+        "          W[i] -= self.learning_rate/np.sqrt(v_hat_W[i] + self.epsilon) * m_hat_W[i]\n",
+        "          b[i] -= self.learning_rate/np.sqrt(v_hat_b[i] + self.epsilon) * m_hat_b[i]\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "        t += 1\n",
+        "      # acccuracy and loss calculated after each epoch\n",
+        "      acuu, loss = self.accuracyLoss(W = W, b = b, x = self.x_train, y = self.y_train)\n",
+        "      v_acc, v_loss = self.accuracyLoss(W =  W, b = b, x = self.x_val, y = self.y_val)\n",
+        "\n",
+        "      if self.isWandb == True:\n",
+        "        wandb.log({'accuracy': acuu})\n",
+        "        wandb.log({'loss': loss})\n",
+        "        wandb.log({'v_accuracy': v_acc})\n",
+        "        wandb.log({'v_loss': v_loss})\n",
+        "        wandb.log({'epoch': iteration})\n",
+        "      print(acuu, loss, v_acc, v_loss)\n",
+        "      iteration += 1\n",
+        "\n",
+        "\n",
+        "    # True W, b after training\n",
+        "\n",
+        "    return W, b\n",
         "\n",
         "\n",
         "\n",
@@ -900,7 +1066,7 @@
       "metadata": {
         "id": "-FlA5nt9HJo4"
       },
-      "execution_count": 25,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -915,7 +1081,7 @@
         "id": "tsfWhs0RZKsN",
         "outputId": "94546d3b-6dec-4fe4-9fbe-decf5dbd267c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -981,7 +1147,7 @@
         },
         "outputId": "8172f5fb-df86-46b9-fd2b-7860f3207529"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1213,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,6 +1263,85 @@
             "       [-4.77740671],\n",
             "       [-0.03322805],\n",
             "       [-5.38989268]])])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(nn.ADAM())"
+      ],
+      "metadata": {
+        "id": "TYqSXN4a2ii0",
+        "outputId": "803d7011-0990-4ac0-899d-7710ab6ff752",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "epoch 1/5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-32-4d729ab97339>:543: RuntimeWarning: invalid value encountered in sqrt\n",
+            "  W[i] -= self.learning_rate/np.sqrt(dm_W[i]/1-self.beta1**2 + self.epsilon) * dW[i]/(1-self.beta2**2)\n",
+            "<ipython-input-32-4d729ab97339>:544: RuntimeWarning: invalid value encountered in sqrt\n",
+            "  b[i] -= self.learning_rate/np.sqrt(dm_b[i]/1-self.beta1**2 + self.epsilon) * db[i]/(1-self.beta2**2)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.005555555555556 [nan] 9.95 [nan]\n",
+            "epoch 2/5\n",
+            "10.005555555555556 [nan] 9.95 [nan]\n",
+            "epoch 3/5\n",
+            "10.005555555555556 [nan] 9.95 [nan]\n",
+            "epoch 4/5\n",
+            "10.005555555555556 [nan] 9.95 [nan]\n",
+            "epoch 5/5\n",
+            "10.005555555555556 [nan] 9.95 [nan]\n",
+            "([array([[nan, nan, nan, ..., nan, nan, nan],\n",
+            "       [nan, nan, nan, ..., nan, nan, nan],\n",
+            "       [nan, nan, nan, ..., nan, nan, nan]]), array([[nan, nan, nan],\n",
+            "       [nan, nan, nan],\n",
+            "       [nan, nan, nan],\n",
+            "       [nan, nan, nan]]), array([[nan, nan, nan, nan],\n",
+            "       [nan, nan, nan, nan]]), array([[nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan],\n",
+            "       [nan, nan]])], [array([[nan],\n",
+            "       [nan],\n",
+            "       [nan]]), array([[nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan]]), array([[nan],\n",
+            "       [nan]]), array([[nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan],\n",
+            "       [nan]])])\n"
           ]
         }
       ]
